--- a/projeto_calculadora/prt_3_add_bloc/web/index.html
+++ b/projeto_calculadora/prt_3_add_bloc/web/index.html
@@ -23,10 +23,10 @@
   <!-- iOS meta tags & icons -->
   <meta name="apple-mobile-web-app-capable" content="yes">
   <meta name="apple-mobile-web-app-status-bar-style" content="black">
-  <meta name="apple-mobile-web-app-title" content="prt_2_funcionalidades">
+  <meta name="apple-mobile-web-app-title" content="prt_3_add_bloc">
   <link rel="apple-touch-icon" href="icons/Icon-192.png">
 
-  <title>prt_2_funcionalidades</title>
+  <title>prt_3_add_bloc</title>
   <link rel="manifest" href="manifest.json">
 </head>
 <body>
